--- a/asd/asd.cbp
+++ b/asd/asd.cbp
@@ -2,21 +2,22 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="sample.c" />
+		<Option title="asd" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/sample" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/asd" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="Deiva asd asd ad " />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/sample" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/asd" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,15 +32,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="booking.h" />
-		<Unit filename="iies.h" />
 		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="test.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="trickyqs.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions />
